--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,28 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:megaatmega2560]
+[env:mega2560]
 platform = atmelavr
 board = megaatmega2560
+framework = arduino
+
+[env:mega2560 USE_IMAGERY]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+lib_deps =
+    ; builtin
+    SPI
+    Wire
+    SD
+
+    ; adafruit
+    adafruit/Adafruit BusIO@^1.11.1
+    adafruit/Adafruit GFX Library@^1.10.13
+    adafruit/Adafruit ILI9341@^1.5.10
+    adafruit/Adafruit FT6206 Library@^1.0.6
+
+[env:uno]
+platform = atmelavr
+board = uno
 framework = arduino
